--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.18.0",
     "vue": "^2.6.6",
     "vue-axios": "^2.1.4",
+    "vue-date-pick": "^1.1.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
@@ -21,6 +22,9 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
+    "node-sass": "^4.11.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "vue-template-compiler": "^2.5.21"
   }
 }
