--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@miyaoka/vue-touch-range": "^1.0.1",
     "axios": "^0.18.0",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
